Добавил роут получения товара
